# Modular-Sensor-Platform

./: Makefile  README.md
i2c_example/: sdkconfig.old
i2c_example/.cache/clangd/index/: i2c_simple_main.c.C2970007D3EE9A43.idx
i2c_example/main/: i2c_simple_main.c
mspsensor/: CMakeLists.txt  sdkconfig  sdkconfig.old
mspsensor/.cache/clangd/index/: i2c_sensor.c.41E915B053D27E5C.idx  i2c_sensor.h.8AA0BC9C20BC2994.idx  mesh_main.c.05EE30FC99A8EE9A.idx  mesh_main.c.B0E56A3407FDB771.idx  mesh_netif.c.5425B4D435C3F5CF.idx  mesh_netif.c.85FC8658C169ED18.idx  mesh_netif.h.8DDBEFD29707D00D.idx  mesh_netif.h.CA99FCC1483D0874.idx  mqtt_app.c.84A262FFE70B3C48.idx  mqtt_app.c.E8DC28D67EBC04F6.idx  spi_sensor.c.64741048B2E3ABCF.idx  spi_sensor.h.77C645CCE0F065C5.idx
mspsensor/main/: CMakeLists.txt  Kconfig.projbuild  i2c_sensor.c  mesh_main.c  mqtt_app.c  spi_sensor.c
mspsensor/main/include/: i2c_sensor.h  spi_sensor.h
mspview/: Cargo.toml  README.md  mqtt_sim.sh  receive.sh
mspview/src/: gui.rs  main.rs  mqtt.rs
spi_example/: sdkconfig  sdkconfig.old
spi_example/.cache/clangd/index/: spi_eeprom.c.665ECAFCFAA6DDCF.idx  spi_eeprom.h.3C7892EE6EC2F266.idx  spi_eeprom_main.c.255021E1517BEA72.idx
spi_example/main/: spi_eeprom_main.c
