[package]
name = "mspview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.26", features = ["serde"]}
colours = "0.1.1"
eframe = "0.22.0"
futures = "0.3.28"
image = "0.24.6"
paho-mqtt = "0.12.1"
serde = "1.0.174"
serde_json = "1.0.103"
